fix: Change font size on mobile view

--- a/src/pages/Landing/howitworks.module.css
+++ b/src/pages/Landing/howitworks.module.css
@@ -127,6 +127,7 @@
 
     .text {
       font-weight: 500;
+      font-size: 16px;
       padding-left: 15px;
     }
 }
